<resources>
    <string name="app_name">Tanya Orlova</string>
    <string name="engineer_in_aircraft">Engineer in Aircraft</string>
    <string name="android_developer">Android Developer</string>
    <string name="master_of_computer_science">Master of Computer Science</string>
    <string name="description">Tanya has been doing Android development since 2015 to 2017 and since 2019 to next time.</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send_message">Send message</string>
    <string name="chooseEmailClient">Choose an Email client:</string>
    <string name="messageSubject">Message from Business card app</string>
    <string name="email_address" translatable="false">application@mail.com</string>
    <string name="my_telegram" translatable="false">https://t.me/TanyaOrlova</string>
    <string name="my_linkedin" translatable="false">https://www.linkedin.com/in/tanyaorlova/</string>
    <string name="my_github" translatable="false">https://github.com/TanyaOrlova</string>
    <string name="error_no_link_app">You haven`t open link app</string>
    <string name="error_no_email_app">You haven`t email app</string>
    <string name="disclaimer">© 2019 Tanya Orlova</string>
    <string name="title_activity_news_list" translatable="false">NY Times</string>
    <string name="menu_action_switch">About</string>
</resources>
